test lien vers projet GH

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Olivier Maisonneuve - Portfolio</title>
 </head>
 <body>
-    <p><a href="https://opyms.github.io/memory-js">lien test</a></p>
+    <p><a href="https://opyms.github.io/memory-js/">lien test</a></p>
 </body>
 </html>
