--- a/index.html
+++ b/index.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olivier Maisonneuve - Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        .col, .col-2, .col-6 {
+            border: 1px solid #333;
+        }
+    </style>
 </head>
 <body>
-    <p><a href="https://opyms.github.io/memory-js/">lien test</a></p>
+<div class="container">
+    <div class="row">
+        <div class="col ps-5 py-3">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus minus ullam quibusdam blanditiis 
+            perferendis placeat, dignissimos aliquid quaerat, ea nesciunt veritatis exercitationem aperiam tempora? Vel commodi aperiam sunt. Voluptate, odit.
+        </div>
+        <div class="col-6 px-5">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus minus ullam quibusdam blanditiis 
+            perferendis placeat, dignissimos aliquid quaerat, ea nesciunt veritatis exercitationem aperiam tempora? Vel commodi aperiam sunt. Voluptate, odit.
+        </div>
+        <div class="col">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus minus ullam quibusdam blanditiis 
+            perferendis placeat, dignissimos aliquid quaerat, ea nesciunt veritatis exercitationem aperiam tempora? Vel commodi aperiam sunt. Voluptate, odit.
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id dolor id nibh ultricies vehicula ut id
+            elit. Donec id elit non mi porta gravida at eget metus.
+        </div>
+        <div class="col-2">
+            Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam quis risus eget urna
+            mollis ornare vel eu leo. Fusce dapibus, tellus ac cursus commodo.
+        </div>
+    </div>
+</div>
+    <p><a href="https://opyms.github.io/GameOfLife/">lien test</a></p>
 </body>
 </html>
