--- a/index.html
+++ b/index.html
@@ -1,44 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Olivier Maisonneuve - Portfolio</title>
+    <title>Olivier MAISONNEUVE - Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
     <style>
-        .col, .col-2, .col-6 {
+        .col {
             border: 1px solid #333;
         }
     </style>
 </head>
+
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col ps-5 py-3">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus minus ullam quibusdam blanditiis 
-            perferendis placeat, dignissimos aliquid quaerat, ea nesciunt veritatis exercitationem aperiam tempora? Vel commodi aperiam sunt. Voluptate, odit.
-        </div>
-        <div class="col-6 px-5">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus minus ullam quibusdam blanditiis 
-            perferendis placeat, dignissimos aliquid quaerat, ea nesciunt veritatis exercitationem aperiam tempora? Vel commodi aperiam sunt. Voluptate, odit.
-        </div>
-        <div class="col">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus minus ullam quibusdam blanditiis 
-            perferendis placeat, dignissimos aliquid quaerat, ea nesciunt veritatis exercitationem aperiam tempora? Vel commodi aperiam sunt. Voluptate, odit.
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id dolor id nibh ultricies vehicula ut id
-            elit. Donec id elit non mi porta gravida at eget metus.
-        </div>
-        <div class="col-2">
-            Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam quis risus eget urna
-            mollis ornare vel eu leo. Fusce dapibus, tellus ac cursus commodo.
-        </div>
-    </div>
-</div>
-    <p><a href="https://opyms.github.io/GameOfLife/">lien test</a></p>
+    <header>
+        <span>Olivier Maisonneuve</span>
+        <nav>
+            <ul>
+                <li><a href="#CV">CV</a></li>
+                <li><a href="#Competences">COMPÉTENCES</a></li>
+                <li><a href="#Projets">PROJETS</a></li>
+                <li><a href="#Contact">CONTACTEZ-MOI</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div id="top"></div>
+        <section class="container" id="presentation">
+            <div class="row justify-content-center align-items-center">
+                <p class="text-center display-1">Site en construction</p>
+                <div class="col-12 col-md-8 col-lg-3">
+                    <img src="assets/images/Arothron_nigropunctatus_-_Wilhelma_02.jpg" alt="portrait d'Olivier Maisonneuve" class="rounded-circle mx-auto d-block">
+                    <p class="text-center">Bonjour, je suis Olivier Maisonneuve</p>
+                    <p class="text-center">Développeur back-end</p>
+                    <p class="text-center">Après plus de 20 ans dans le bâtiment, j'ai entamé début avril une reconversion pour devenir développeur Web et Web Mobile.
+
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <p><a href="https://opyms.github.io/GameOfLife/">Un petit jeu de la vie en JS</a></p>
+        </section>
+        <section>
+            <p><a href="https://opyms.github.io/PlantesDeNantes/">Jouer avec les API de la ville de Nantes</a></p>
+        </section>
+    </main>
 </body>
+
 </html>
