amélioration du design et de la responsivité

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <div id="top"></div>
         <section id="presentation">
             <div>
-                <h1>Site en construction</h1>
                 <img src="assets/images/photo_Olivier_Maisonneuve.JPG" alt="portrait d'Olivier Maisonneuve"
                     class="portrait">
-                <p><strong>Bonjour, je suis Olivier Maisonneuve</strong></p>
+                <h1>Bonjour, je suis Olivier Maisonneuve</h1>
                 <p><em>Développeur Web et Web Mobile</em></p>
                 <p class="center-text">Après plus de 20 ans dans le bâtiment, j'ai entamé début avril une reconversion
-                    pour devenir développeur Web. Autonome, doté d'un esprit d'analyse et toujours prêt à apprendre, je je souhaite
+                    pour devenir développeur Web. Autonome, doté d'un esprit d'analyse et toujours prêt à apprendre, je
+                    je souhaite
                     m’investir dans les projets de votre entreprise.
                 </p>
             </div>
@@ -69,8 +69,9 @@
                             <div>
                                 <a href="https://github.com/OpymS/GameOfLife"><img src="assets/images/github.png"
                                         alt="lien vers le dépôt Github" class="petitLogo"></a>
-                                <a href="https://opyms.github.io/GameOfLife/"><img src="assets/images/lien hypertexte.png"
-                                        alt="lien vers l'implémentation" class="petitLogo"></a>
+                                <a href="https://opyms.github.io/GameOfLife/"><img
+                                        src="assets/images/lien hypertexte.png" alt="lien vers l'implémentation"
+                                        class="petitLogo"></a>
                             </div>
                         </div>
                         <p class="center-text">Une implémentation du classique jeu de la
@@ -85,13 +86,15 @@
                             <div>
                                 <a href="https://github.com/OpymS/PlantesDeNantes"><img src="assets/images/github.png"
                                         alt="lien vers le dépôt Github" class="petitLogo"></a>
-                                <a href="https://opyms.github.io/PlantesDeNantes/"><img src="assets/images/lien hypertexte.png"
-                                        alt="lien vers l'implémentation" class="petitLogo"></a>
+                                <a href="https://opyms.github.io/PlantesDeNantes/"><img
+                                        src="assets/images/lien hypertexte.png" alt="lien vers l'implémentation"
+                                        class="petitLogo"></a>
                             </div>
                         </div>
-                        <p class="center-text">Nantes Métropole fournit des API nombreuses et variées. L'occasion de s'amuser un peu et de
-                        rendre hommage à mon grand-père qui fut jardinier à la Ville de Nantes durant toute sa
-                        carrière.</p>
+                        <p class="center-text">Nantes Métropole fournit des API nombreuses et variées. L'occasion de
+                            s'amuser un peu et de
+                            rendre hommage à mon grand-père qui fut jardinier à la Ville de Nantes durant toute sa
+                            carrière.</p>
                     </div>
                 </div>
                 <div class="projet" id="portfolio">
@@ -115,10 +118,14 @@
             <div>
                 <h2>Contact</h2>
                 <div>
-                    <a href="https://github.com/OpymS/"><img src="assets/images/github.png" alt="lien vers mon Github"></a>
-                    <a href="https://www.linkedin.com/in/olivier-maisonneuve-58b203254"><img src="assets/images/linkedIn.png" alt="lien vers mon LinkedIn"></a>
-                    <a href="mailto:olivier.maisonneuve@proton.me"><img src="assets/images/mail.png" alt="m'écrire un mail"></a>
-                    <a href="https://www.codingame.com/profile/af4b25e8d64efa73cbf44e84aa5be8258023785"><img src="assets/images/codingame.png" alt="lien vers mon compte Codingame"></a>
+                    <a href="https://github.com/OpymS/"><img src="assets/images/github.png"
+                            alt="lien vers mon Github"></a>
+                    <a href="https://www.linkedin.com/in/olivier-maisonneuve-58b203254"><img
+                            src="assets/images/linkedIn.png" alt="lien vers mon LinkedIn"></a>
+                    <a href="mailto:olivier.maisonneuve@proton.me"><img src="assets/images/mail.png"
+                            alt="m'écrire un mail"></a>
+                    <a href="https://www.codingame.com/profile/af4b25e8d64efa73cbf44e84aa5be8258023785"><img
+                            src="assets/images/codingame.png" alt="lien vers mon compte Codingame"></a>
                 </div>
             </div>
         </section>
