--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <div>
                 <img src="assets/images/photo_Olivier_Maisonneuve.JPG" alt="portrait d'Olivier Maisonneuve"
                     class="portrait">
-                <h1>Bonjour, je suis Olivier Maisonneuve</h1>
-                <p><em>Développeur Web et Web Mobile</em></p>
+                <h1 class="center-text">Bonjour, je suis Olivier Maisonneuve</h1>
+                <p><em class="center-text">Développeur Web et Web Mobile</em></p>
                 <p class="center-text">Après plus de 20 ans dans le bâtiment, j'ai entamé début avril une reconversion
                     pour devenir développeur Web. Autonome, doté d'un esprit d'analyse et toujours prêt à apprendre, je
                     je souhaite
