--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Olivier MAISONNEUVE - Portfolio</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="assets/images/favicon.png" />
 </head>
 
 <body>
@@ -28,7 +29,7 @@
                 <img src="assets/images/photo_Olivier_Maisonneuve.JPG" alt="portrait d'Olivier Maisonneuve"
                     class="portrait">
                 <h1 class="center-text">Bonjour, je suis Olivier Maisonneuve</h1>
-                <p><em class="center-text">Développeur Web et Web Mobile</em></p>
+                <p class="center-text"><em>Développeur Web et Web Mobile</em></p>
                 <p class="center-text">Après plus de 20 ans dans le bâtiment, j'ai entamé début avril une reconversion
                     pour devenir développeur Web. Autonome, doté d'un esprit d'analyse et toujours prêt à apprendre, je
                     je souhaite
@@ -131,7 +132,6 @@
         </section>
     </main>
     <footer>
-
     </footer>
 </body>
 
