ajout du projet ENI-Enchères

--- a/index.html
+++ b/index.html
@@ -113,6 +113,20 @@
                         <p class="center-text">Ce projet correspond au site que vous êtes en train de consulter !</p>
                     </div>
                 </div>
+                <div class="projet" id="ENI-Encheres">
+                    <img src="assets/images/ENI-Encheres.png" alt="une image de ENI-Encheres">
+                    <div class="descriptionProjet">
+                        <div class="subtitle">
+                            <h3>ENI Enchères</h3>
+                            <div>
+                                <a href="https://github.com/OpymS/ENI_Encheres"><img src="assets/images/github.png"
+                                        alt="lien vers le dépôt Github" class="petitLogo"></a>
+                            </div>
+                        </div>
+                        <p class="center-text">Ce site d'enchères réalisé en groupe lors de ma formation à l'ENI a été développé avec Java Spring Boot et Thymeleaf. 
+                            Il n'est malheureusement pas hébergé en ligne mais vous pouvez retrouver l'ensemble des sources sur Github.</p>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="contact">
