--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section id="projets">
             <h2>Mes projets</h2>
             <div>
-                <div class="projet" id="ENI-Sortir">
+                <!-- <div class="projet" id="ENI-Sortir">
                     <img src="assets/images/Sortir.png" alt="une image de ENI-Sortir">
                     <div class="descriptionProjet">
                         <div class="subtitle">
@@ -82,7 +82,7 @@
                             Merci de ne pas tout casser.
                         </p>
                     </div>
-                </div>
+                </div> -->
                 <div class="projet" id="jeuDeLaVie">
                     <img src="assets/images/jeu_de_la_vie.jpg" alt="image d'un plateau de jeu de la vie">
                     <div class="descriptionProjet">
