--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section id="projets">
             <h2>Mes projets</h2>
             <div>
-                <!-- <div class="projet" id="ENI-Sortir">
+                <div class="projet" id="ENI-Sortir">
                     <img src="assets/images/Sortir.png" alt="une image de ENI-Sortir">
                     <div class="descriptionProjet">
                         <div class="subtitle">
@@ -70,19 +70,15 @@
                             <div>
                                 <a href="https://github.com/OpymS/ENI_Sortir.com"><img src="assets/images/github.png"
                                         alt="lien vers le dépôt Github" class="petitLogo"></a>
-                                <a href="http://51.77.140.10/"><img
-                                        src="assets/images/lien hypertexte.png" alt="lien vers l'implémentation"
-                                        class="petitLogo"></a>
                             </div>
                         </div>
                         <p class="center-text">Ce site d'organisation de sortie réalisé en groupe lors de ma formation à l'ENI a été
                             développé en PHP avec Symfony.
-                            Je me suis occupé de le déployer sur un VPS pour que vous puissiez le tester. Connectez-vous en admin (mdp: 1234) pour créer votre compte. 
-                            Puis créez des sorties. Inscrivez-vous à des sorties…
-                            Merci de ne pas tout casser.
+                            Il n'est malheureusement pas hébergé en ligne mais vous pouvez retrouver l'ensemble des
+                            sources sur Github.
                         </p>
                     </div>
-                </div> -->
+                </div>
                 <div class="projet" id="jeuDeLaVie">
                     <img src="assets/images/jeu_de_la_vie.jpg" alt="image d'un plateau de jeu de la vie">
                     <div class="descriptionProjet">
