ajout du projet memoires-vives

--- a/index.html
+++ b/index.html
@@ -62,6 +62,22 @@
         <section id="projets">
             <h2>Mes projets</h2>
             <div>
+                <div class="projet" id="memoires-vives">
+                    <img src="assets/images/memoires-vives.png" alt="une image de memoires-vives">
+                    <div class="descriptionProjet">
+                        <div class="subtitle">
+                            <h3>Mémoires vives</h3>
+                            <div>
+                                <a href="https://github.com/OpymS/memoires-vives"><img src="assets/images/github.png"
+                                        alt="lien vers le dépôt Github" class="petitLogo"></a>
+                                        <a href="https://memoires-vives.fr"><img src="assets/images/lien hypertexte.png" alt="lien vers l'implémentation"
+                                                class="petitLogo"></a>
+                            </div>
+                        </div>
+                        <p class="center-text">Pour ce projet développé avec Java Spring Boot, j'ai également pris en charge le déploiement. Les premières étapes ont consisté à configurer un VPS et à mettre en place un pipeline CI/CD via GitHub Actions et Docker pour la conteneurisation des applications, en utilisant Docker Hub comme registre d'images. Ces mesures permettent à ce projet, encore en phase initiale, d'évoluer régulièrement. N'hésitez pas à le visiter fréquemment pour suivre ses avancées.
+                        </p>
+                    </div>
+                </div>
                 <div class="projet" id="ENI-Sortir">
                     <img src="assets/images/Sortir.png" alt="une image de ENI-Sortir">
                     <div class="descriptionProjet">
@@ -72,10 +88,11 @@
                                         alt="lien vers le dépôt Github" class="petitLogo"></a>
                             </div>
                         </div>
-                        <p class="center-text">Ce site d'organisation de sortie réalisé en groupe lors de ma formation à l'ENI a été
-                            développé en PHP avec Symfony.
-                            Il n'est malheureusement pas hébergé en ligne mais vous pouvez retrouver l'ensemble des
-                            sources sur Github.
+                        <p class="center-text">Ce site d'organisation de sortie réalisé en groupe lors de ma formation à
+                        l'ENI a été
+                        développé en PHP avec Symfony.
+                        Il n'est malheureusement pas hébergé en ligne mais vous pouvez retrouver l'ensemble des
+                        sources sur Github.
                         </p>
                     </div>
                 </div>
@@ -113,24 +130,6 @@
                             s'amuser un peu et de
                             rendre hommage à mon grand-père qui fut jardinier à la Ville de Nantes durant toute sa
                             carrière.</p>
-                    </div>
-                </div>
-                <div class="projet" id="ENI-Encheres">
-                    <img src="assets/images/ENI-Encheres.png" alt="une image de ENI-Encheres">
-                    <div class="descriptionProjet">
-                        <div class="subtitle">
-                            <h3>ENI Enchères</h3>
-                            <div>
-                                <a href="https://github.com/OpymS/ENI_Encheres"><img src="assets/images/github.png"
-                                        alt="lien vers le dépôt Github" class="petitLogo"></a>
-                            </div>
-                        </div>
-                        <p class="center-text">Ce site d'enchères réalisé en groupe lors de ma formation à l'ENI a été
-                            développé avec
-                            Java Spring Boot et Thymeleaf.
-                            Il n'est malheureusement pas hébergé en ligne mais vous pouvez retrouver l'ensemble des
-                            sources sur Github.
-                        </p>
                     </div>
                 </div>
                 <div class="projet" id="portfolio">
